# django-notes

./: .flake8  .gitignore  Dockerfile  README.md  db_example.cnf  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  python_strartup.py  requirements.txt
django_notes/: celery.py  context_processors.py  forms.py  settings.py  urls.py  views.py
notes/: Shares.py  admin.py  db_queries.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_userprofile_is_verified_email_emailverification.py
static/css/: style.css
static/js/: autocomplete.js  notes.js
templates/: edit_profile.html  header.html  login.html  main.html  signup.html
templates/notes/: edit.html  index.html  list.html  main.html  new.html  note_in_list.html  show.html
templates/notes/accounts/: login.html
templates/registration/: email_verification.html
tests/: test_forms.py  test_note.py  test_shared.py  test_test.py  test_users.py  test_views.py
tests/data/: test_2.json  test_3.json
