[tool.poetry]
name = "django-notes"
version = "0.1.0"
description = ""
authors = ["Сергей Сушков <sushkov_sv@ursip.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
django = "^5.0.3"
environs = {extras = ["django"], version = "^11.0.0"}
django-allauth = "^0.61.1"
pillow = "^10.2.0"
celery = "^5.3.6"
django-cors-headers = "^4.3.1"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"
django-debug-toolbar = "^4.3.0"
bleach = "^6.1.0"
whitenoise = "^6.6.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
